# src/dtos/reply.dto.ts
@@ -1,8 +1,5 @@
 import { Reply } from '@prisma/client';
 
-export type CreateReplyDTO = Pick<
-  Reply,
-  'threadId' | 'userId' | 'content' | 'images'
->;
+export type CreateReplyDTO = Pick<Reply, 'content'>;
 
 export type UpdateReplyDTO = Pick<Reply, 'content' | 'images'>;
