# src/routes/api.route.ts
@@ -5,6 +5,7 @@ import authRouter from './auth.route';
 import threadRouter from './thread.route';
 import likeRouter from './likes.route';
 import profileRouter from './profile.route';
+import replyRouter from './reply.route';
 
 const apiRouter = Router();
 
@@ -13,5 +14,6 @@ apiRouter.use('/auth', authRouter);
 apiRouter.use('/threads', threadRouter);
 apiRouter.use('/likes', likeRouter);
 apiRouter.use('/profiles', profileRouter);
+apiRouter.use('/replies', replyRouter);
 
 export default apiRouter;
