# src/utils/schemas/reply.schmea.ts
@@ -1,0 +1,6 @@
+import Joi from 'joi';
+import { CreateReplyDTO } from '../../dtos/reply.dto';
+
+export const createReplySchema = Joi.object<CreateReplyDTO>({
+  content: Joi.string().max(200),
+});
